@@ -24,10 +24,11 @@ PostGIS 2.1.0
     (Bborie Park / UC Davis)
   - Added array variants of ST_SetValues() to set many pixel values of a band
     in one call (Bborie Park / UC Davis)
-  - #1643, Tiger Geocoder - Tiger 2011 loader (Regina Obe / Paragon Corporation) 
-    Funded by Hunter Systems Group
+  - #1643, Tiger Geocoder - Tiger 2011 loader 
+    (Regina Obe / Paragon Corporation) Funded by Hunter Systems Group
   - GEOMETRYCOLLECTION support for ST_MakeValid (Sandro Santilli / Vizzuality)
   - ST_PixelOfValue (Bborie Park / UC Davis)
+  - Casts to/from PostgreSQL geotypes (point/path/polygon).
 
 * Enhancements *
   - #823, tiger geocoder: Make loader_generate_script download portion less greedy
